# rs_word

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_diverse_patch_bank.py  build_mainstem_dataset.py  build_patch_bank.py  build_stroke_library.py  build_water_masks.py  download_vector_stroke_imagery.py  mine_scaled_water_strokes.py  mine_vector_strokes.py
src/rs_words/: cli.py  compositor.py  config.py  glyph.py  matcher.py  poster.py  stroke_library.py  water_masks.py  web.py
src/rs_words/data_engine/: __init__.py  osm_rivers.py  patch_bank.py  pc_downloader.py
tests/: test_build_diverse_patch_bank.py  test_build_mainstem_dataset.py  test_cli.py  test_compositor.py  test_download_vector_stroke_imagery.py  test_glyph.py  test_matcher.py  test_mine_scaled_water_strokes.py  test_mine_vector_strokes.py  test_osm_rivers.py  test_patch_bank.py  test_pc_downloader.py  test_poster.py  test_smoke.py  test_stroke_library.py  test_water_masks.py  test_web.py
web/: index.html  review.html  swipe.html
web/static/: style.css
