[project]
name = "rs-words"
version = "0.1.0"
description = "Spell Chinese text with real river satellite imagery"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "rs-words contributor"}]
dependencies = [
    "pillow>=10.0",
    "fonttools>=4.47",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "opencv-python-headless>=4.8",
    "rasterio>=1.3",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "osmnx>=1.9",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fastapi>=0.104",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24",
    "typer>=0.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[project.scripts]
rs-words = "rs_words.cli:app"

[tool.ruff.lint.extend-per-file-ignores]
"scripts/build_patch_bank.py" = ["E402"]
"scripts/build_water_masks.py" = ["E402"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
